# AeroML

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  cmake_it  components.yaml
config/: GMAO_Shared.sparse
src/: CMakeLists.txt
src/Applications/: CMakeLists.txt
src/Applications/GAAS_App/: CMakeLists.txt
src/NNR/: CMakeLists.txt  run_download_mcd43c1.sh
src/NNR/data/: README.md
src/NNR/modis/: CMakeLists.txt  create_giant.py  create_giant_coll.py  deep.mod_v043.inputs.dict  deep.myd_v043.inputs.dict  deep.template.inputs.dict  giantHeader.txt  land.mod_v043.inputs.dict  land.myd_v043.inputs.dict  land.template.inputs.dict  nnr_howto.ipynb  ocean.mod_v043.inputs.dict  ocean.myd_v043.inputs.dict  ocean.template.inputs.dict  run_create_giant.sh  run_sample_cxalbedo.sh  run_sample_geosit.sh  run_sample_mcd43c1.sh  run_sample_merra.sh  run_sample_merra_tqv_to3.sh  sample_cxalbedo.py  sample_geosit.py  sample_geosit_tqv_to3.py  sample_mcd43c1.py  sample_merra.py  sample_merra_tqv_to3.py  setup_env  setup_env.sh  tavg1_2d_slv_Nx  train_deep.py  train_land.py  train_ocean.py
src/NNR/pyabc/: abc_c6.py  abc_c6_aux.py  abc_viirs.py  colocater.py  colocater_man.py  eval.py  evaluation.py  giant.py  giant_viirs.py  nn.py
src/NNR/viirs/: CMakeLists.txt  aer_tavg_3hr_glo_L576x361_slv  create_giant.py  create_giant_modis.py  db_deep.template.inputs.dict  db_land.template.inputs.dict  db_ocean.template.inputs.dict  download_viirs_laads.sh  giantHeader.txt  run_create_giant.sh  run_sample_geosit.sh  run_sample_geosit_tqv_to3.sh  run_sample_mcd43c1.sh  run_sample_merra.sh  sample_geosit.py  sample_mcd43c1.py  sample_merra.py  setup_env  setup_env.sh  slv_tavg_1hr_glo_L576x361_slv  tavg1_2d_aer_Nx  train_dbdeep.py  train_dbland.py  train_dbocean.py
src/Shared/: .gitignore  CMakeLists.txt
src/Shared/GMAO_Shared/: .gitignore  CMakeLists.txt
src/Shared/GMAO_Shared/GMAO_gfio/: CMakeLists.txt
src/Shared/GMAOpyobs/: CMakeLists.txt
src/Shared/GMAOpyobs/TODO/SDA/: ~$uf_tauc_technical_memo.doc
src/Shared/GMAOpyobs/f2py/: CMakeLists.txt
src/eNNR/: aeronet_modis.ipynb  boxcox.ipynb  filtering_choices.ipynb  g5nr.ipynb  g5nr.py  kde.py  log_transform.ipynb
src/eNNR/data/: README.md
src/eNNR/doc/: Aleatoric vs Epistemic.pptx  Notes 2022-05-31.pptx
src/eNNR/obs/: g5nr.ipynb  g5nr.py  giant.py  mcd43c.py  qc_c6.py
src/eNNR/transforms/: box_cox_transform_data.py  boxcox.py  boxcox_demo.ipynb  boxcox_explore.ipynb
src/edl-analysis/: aod_models.py  boxcox.ipynb  kde.py  mcd43c.py  run_all_aod_models.py
src/edl-analysis/aeronet_modis_deep/: aeronet_modis.ipynb  deep_aqua_results_analysis.ipynb  deep_terra_results_analysis.ipynb  run_deep_models.py  transform_deep_data.py
src/edl-analysis/aeronet_modis_land/: aeronet_modis.ipynb  land_aqua_results_analysis.ipynb  land_terra_results_analysis.ipynb  run_land_models.py  transform_land_data.py
src/edl-analysis/aeronet_modis_ocean/: ocean_aqua_results_analysis.ipynb  ocean_results_analysis-Copy1.ipynb  ocean_terra_results_analysis.ipynb  run_ocean_models.py  transform_ocean_data.py
src/edl-analysis/data/: box_cox_transform_data.py
